compute against attached kernel

--- a/demo/ipyleaflet.html
+++ b/demo/ipyleaflet.html
@@ -122,15 +122,12 @@ m`,
 
         const runAllButton = document.getElementById("run-all");
         runAllButton.onclick = (ev) => {
-          window.demo.notebook.executeAll(window.demo.kernelId);
+          window.demo.notebook.executeAll();
         };
 
         const runLastButton = document.getElementById("run-last");
         runLastButton.onclick = (ev) => {
-          window.demo.notebook.executeOnly(
-            window.demo.kernelId,
-            window.demo.notebook.lastCell().id
-          );
+          window.demo.notebook.executeOnly(window.demo.notebook.lastCell().id);
         };
 
         const restartButton = document.getElementById("restart");
