--- a/demo/demo-basic-observe.html
+++ b/demo/demo-basic-observe.html
@@ -94,7 +94,7 @@ plt.grid(True)</pre
     >
       hard reset
     </button>
-    <script src="/demo.js"></script>
+    <script src="/demo-basic-observe.js"></script>
     <script>
       const options = {
         useBinder: true,
