--- a/demo/index.html
+++ b/demo/index.html
@@ -22,7 +22,9 @@
       </p>
       <ul>
         <li>
-          <a href="./basic.html">Basic demo connecting to mybinder.org</a>
+          <a href="./basic-observe.html"
+            >Basic demo connecting to mybinder.org</a
+          >
         </li>
         <li>
           <a href="./ipywidgets.html"
