--- a/demo/demo-basic-observe.html
+++ b/demo/demo-basic-observe.html
@@ -97,7 +97,8 @@ plt.grid(True)</pre
     <script src="/demo-basic-observe.js"></script>
     <script>
       const options = {
-        useBinder: true,
+        useBinder: false,
+        useJupyterLite: true,
         requestKernel: true,
         binderOptions: {
           repo: "binder-examples/requirements",
