--- a/demo/index.html
+++ b/demo/index.html
@@ -2,10 +2,7 @@
 <html>
   <head>
     <title><%= htmlWebpackPlugin.options.title %></title>
-    <link
-      rel="stylesheet"
-      href="https://unpkg.com/@curvenote/article/dist/curvenote.css"
-    />
+    <link rel="stylesheet" href="https://unpkg.com/@curvenote/article/dist/curvenote.css" />
     <script src="https://unpkg.com/@curvenote/article"></script>
     <style>
       body {
@@ -16,41 +13,28 @@
   <body>
     <article>
       <h1>thebe-core: available demos</h1>
-      <p>
-        This is a listing of the available demos for thebe-core in use from the
-        native js api,
-      </p>
+      <p>This is a listing of the available demos for thebe-core in use from the native js api,</p>
       <ul>
         <li>
-          <a href="./basic-observe.html"
-            >Basic demo connecting to mybinder.org</a
-          >
+          <a href="./basic-observe.html">Basic demo connecting to mybinder.org</a>
         </li>
         <li>
-          <a href="./ipywidgets.html"
-            >ipywidgets demo connecting to mybinder.org</a
-          >
+          <a href="./ipywidgets.html">ipywidgets demo connecting to mybinder.org</a>
         </li>
         <li>
-          <a href="./local.html"
-            >ipywidgets demo connecting to a local Jupyter instance</a
-          >
+          <a href="./local.html">ipywidgets demo connecting to a local Jupyter instance</a>
         </li>
         <li>
-          <a href="./ipyleaflet.html"
-            >ipyleaflet demo connecting to a local Jupyter instance</a
-          >
+          <a href="./ipyleaflet.html">ipyleaflet demo connecting to a local Jupyter instance</a>
         </li>
         <li>
           <a href="./demo-single.html"
-            >Demo of rendering a single cell without use of the Notebook
-            interface</a
+            >Demo of rendering a single cell without use of the Notebook interface</a
           >
         </li>
         <li>
           <a href="./demo-notebook.html"
-            >Demo of rendering a single cell without use of the Notebook
-            interface</a
+            >Demo of rendering a single cell without use of the Notebook interface</a
           >
         </li>
         <li>
