first pyiolite call via a session

--- a/demo/demo-basic-observe.html
+++ b/demo/demo-basic-observe.html
@@ -126,6 +126,8 @@ plt.grid(True)</pre
 
         window.demo = { notebook: null, kernel: null };
 
+        // registerServiceWorker('services.js');
+
         const kernel = bootstrap(
           window.demo,
           options,
