--- a/demo/index.html
+++ b/demo/index.html
@@ -42,6 +42,9 @@
             >Demo of different kernel controls and interaction options</a
           >
         </li>
+        <li>
+          <a href="./demo-lite.html">Demo of running against a JupyterLite kernel</a>
+        </li>
       </ul>
     </article>
   </body>
