🪵  all basic demos launching with logs

--- a/demo/index.html
+++ b/demo/index.html
@@ -16,7 +16,12 @@
       <p>This is a listing of the available demos for thebe-core in use from the native js api,</p>
       <ul>
         <li>
-          <a href="./basic-observe.html">Basic demo connecting to mybinder.org</a>
+          A basic example with a matplotlib plot
+          <ul>
+            <li><a href="./basic-binder.html">Connecting to mybinder.org</a></li>
+            <li><a href="./basic-local.html">Connecting to a local Jupyter server</a></li>
+            <li><a href="./basic-lite.html">Connecting to a JupyterLite kernel</a></li>
+          </ul>
         </li>
         <li>
           <a href="./ipywidgets.html">ipywidgets demo connecting to mybinder.org</a>
@@ -41,9 +46,6 @@
           <a href="./demo-kernels.html"
             >Demo of different kernel controls and interaction options</a
           >
-        </li>
-        <li>
-          <a href="./demo-lite.html">Demo of running against a JupyterLite kernel</a>
         </li>
       </ul>
     </article>
