improved demo, added starter script

--- a/demo/demo.html
+++ b/demo/demo.html
@@ -68,6 +68,10 @@
         useBinder: false,
         useJupyterLite: true,
         requestSession: true,
+        kernelOptions: {
+          name: 'python',
+          kernelName: 'python',
+        },
       };
 
       const LOCAL_OPTIONS = {
