🗜  reduced package to essentials only

--- a/demo/index.html
+++ b/demo/index.html
@@ -58,7 +58,7 @@
         messaging callbacks
       </p>
     </div>
-    <div>
+    <div class="controls">
       <p>
         Current server status is
         <span id="server-status" class="status">none</span> and session/kernel status is
